--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>tic tac choo</title>
+  <link rel="stylesheet" href="https://choo.io/assets/GT-Cinetype-Regular.woff">
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <script src="bundle.js"></script>
